Overflow changed to auto to prevent unnecessary scrolling when no notifications are present

--- a/client/src/components/Header/components/NotificationList/NotificationList-Style.scss
+++ b/client/src/components/Header/components/NotificationList/NotificationList-Style.scss
@@ -5,5 +5,5 @@
 
 .notification-list:focus,
 .notification-list:hover {
-    overflow-y: scroll;
+    overflow-y: auto;
 }
